@@ -1,3 +1,13 @@
+2011-11-25  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* am/uptex.am (uppltotf_CPPFLAGS): Replace '-DDHEX_CHAR_CODE'
+	by '-DPRESERVE_PUTC'.  Mail [ptex:00311] from TANAKA Takuji.
+
+	* am/uptex.am (upbibtex_CPPFLAGS, uptftopl_CPPFLAGS): Drop the
+	useless '-DDHEX_CHAR_CODE'.
+	(updvitype_CPPFLAGS): Replace '-DDHEX_CHAR_CODE' by
+	'-DHEX_CHAR_CODE'.
+
 2011-09-30  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* updvitype.ch: Use const stringcast for get_enc_string().
