@@ -1,3 +1,8 @@
+2011-11-25  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* am/ptex.am (pdvitype_CPPFLAGS): Replace '-DDHEX_CHAR_CODE' by
+	'-DHEX_CHAR_CODE'.
+
 2011-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* am/ptex.am (DISTCLEANFILES): Preserve distributed files.
